--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Room Database</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="enter_first_name">First Name</string>
+    <string name="enter_last_name">Last Name</string>
+    <string name="enter_age">Age</string>
+    <string name="btn_add">Add</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
