--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="enter_last_name">Last Name</string>
     <string name="enter_age">Age</string>
     <string name="btn_add">Add</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_update">Update</string>
+
 </resources>
